--- a/.env
+++ b/.env
@@ -6,5 +6,6 @@ POSTGRES_PASSWORD=kilsarpassword
 DATABASE_URL=postgresql://kilsaruser:kilsarpassword@db:5432/kilsardb?sslmode=disable
 REDIS_HOST=redis
 REDIS_PORT=6379
+DJANGO_SECRET_KEY=Custom-Secret-Key
 
 DJANGO_DEBUG=1
